    False to revert to pre-2.3.1 results name behavior -
    review use of names for MatchFirst and Or expressions
    containing And expressions, as they will return the
    complete list of parsed tokens, not just the first one.
    Use `__diag__.warn_multiple_tokens_in_named_alternation`
    to help identify those expressions in your parsers that
    will have changed as a result.

- Expanded __diag__ and __compat__ to actual classes instead of
  just namespaces, to add some helpful behavior:
  - enable() and .disable() methods to give extra
    help when setting or clearing flags (detects invalid
    flag names, detects when trying to set a __compat__ flag
    that is no longer settable). Use these methods now to
    set or clear flags, instead of directly setting to True or
    False.

        import pyparsing as pp
        pp.__diag__.enable("warn_multiple_tokens_in_named_alternation")

  - __diag__.enable_all_warnings() is another helper that sets
    all "warn*" diagnostics to True.

        pp.__diag__.enable_all_warnings()

- Fixed handling of ParseSyntaxExceptions raised as part of Each
  expressions, when sub-expressions contain '-' backtrack
  suppression. As part of resolution to a question posted by John
  Greene on StackOverflow.

- Potentially *huge* performance enhancement when parsing Word
  expressions built from pyparsing_unicode character sets. Word now
  internally converts ranges of consecutive characters to regex
  character ranges (converting "0123456789" to "0-9" for instance),
  resulting in as much as 50X improvement in performance! Work
  inspired by a question posted by Midnighter on StackOverflow.

- Fixed bug in CloseMatch where end location was incorrectly
  computed; and updated partial_gene_match.py example.

- Fixed bug in indentedBlock with a parser using two different
  types of nested indented blocks with different indent values,
  but sharing the same indent stack, submitted by renzbagaporo.
